[gd_scene load_steps=4 format=3 uid="uid://b5m8o0hfk7u5k"]

[ext_resource type="Script" path="res://scripts/UI/game_over.gd" id="1_gacox"]
[ext_resource type="PackedScene" uid="uid://d1wo5w0rpw6ha" path="res://scenes/UI/settings_menu.tscn" id="2_oamy5"]
[ext_resource type="PackedScene" uid="uid://c1aiqjg3ww8w6" path="res://scenes/UI/button.tscn" id="6_kgy1f"]

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_gacox")
settings_menu_scene = ExtResource("2_oamy5")

[node name="BaseButtons" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BaseButtons"]
layout_direction = 3
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="Restart" parent="BaseButtons/VBoxContainer" instance=ExtResource("6_kgy1f")]
layout_mode = 2
button_text = "Restart"

[node name="Store" parent="BaseButtons/VBoxContainer" instance=ExtResource("6_kgy1f")]
layout_mode = 2
button_text = "Store"

[node name="Settings" parent="BaseButtons/VBoxContainer" instance=ExtResource("6_kgy1f")]
layout_mode = 2
button_text = "Settings"

[node name="Quit" parent="BaseButtons/VBoxContainer" instance=ExtResource("6_kgy1f")]
layout_mode = 2
button_text = "Quit"

[connection signal="pressed" from="BaseButtons/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="BaseButtons/VBoxContainer/Store" to="." method="_on_store_pressed"]
[connection signal="pressed" from="BaseButtons/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="BaseButtons/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
